--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.11
   provider: ^6.1.5
+  image_picker: ^1.1.2
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
