--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.5
   image_picker: ^1.1.2
   file_picker: ^10.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
