--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,10 +4,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.6.0'       // ✅ Required
+        classpath 'com.android.tools.build:gradle:8.6.0'  // ✅ Correct
         classpath 'com.google.gms:google-services:4.4.1'
     }
 }
+
 
 allprojects {
     repositories {
