--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   geolocator: ^14.0.2
   geocoding: ^4.0.0
   permission_handler: ^12.0.1
+  location: ^8.0.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
