--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   permission_handler: ^12.0.1
   location: ^8.0.1
   http: ^1.4.0
+  firebase_storage: ^12.4.9
 
 dev_dependencies:
   flutter_test:
