--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   location: ^8.0.1
   http: ^1.4.0
   firebase_storage: ^12.4.9
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
