--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^1.4.0
   firebase_storage: ^12.4.9
   carousel_slider: ^5.1.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
